--- a/main.css
+++ b/main.css
@@ -149,6 +149,9 @@ a:visited {
 a:link {
     text-decoration: none;
 }
+a:hover {
+    color: var(--colorTealDk)!important;
+}
 a:link.textUnderline {
     text-decoration-line: underline;
     text-decoration-thickness: 0.03em;
@@ -223,7 +226,7 @@ body .displayPhone {
     margin: 0 auto;
     max-width: 1160px;
     width: 100%;
-    height: 4em;
+    height: 64px;
     text-align: center;
     align-items: center;
     transition: ease 0.4s;
@@ -263,7 +266,7 @@ body .displayPhone {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 19px 1.6vw;
+    padding: 22px 1.6vw;
     border-radius: 0;
     transition: .2s all;
 }
