--- a/main.css
+++ b/main.css
@@ -355,7 +355,7 @@ body .displayPhone {
 
 a.nav-link {
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 16px;
     font-weight: 300;
     -webkit-transition: 0.5s;
     transition: 0.5s;
@@ -1624,7 +1624,6 @@ ul {
     list-style-type: none;
     font-family: inherit;
     font-size: clamp(0.8em, 1vw, 1.1em);
-    line-height: 1.4em;
     font-weight: 300;
     list-style-position: outside;
     margin-left: 0;
